test/log/load/vldcb8in0_v_u32_m.txt
vldcb8in0_v_u32_m.c:16:2: warning: multi-line comment [-Wcomment]
   16 |  //#define data_init_bool(a, b, n, threshold) \
      |  ^
vldcb8in0_v_u32_m.c:18:44: warning: backslash and newline separated by space
   18 |  #define data_init_scalar(a, b, threshold) \
      |                                             
vldcb8in0_v_u32_m.c:37:6: warning: no previous prototype for 'vldcb8in0_v_u32_m_golden' [-Wmissing-prototypes]
   37 | void vldcb8in0_v_u32_m_golden(uint64_t *mask,uint32_t maskoff[8][16],uint32_t *base,uint32_t imm,uint32_t exp_result[][ELE_NUM]) {
      |      ^~~~~~~~~~~~~~~~~~~~~~~~
vldcb8in0_v_u32_m.c: In function 'vldcb8in0_v_u32_m_golden':
vldcb8in0_v_u32_m.c:37:41: warning: unused parameter 'mask' [-Wunused-parameter]
   37 | void vldcb8in0_v_u32_m_golden(uint64_t *mask,uint32_t maskoff[8][16],uint32_t *base,uint32_t imm,uint32_t exp_result[][ELE_NUM]) {
      |                               ~~~~~~~~~~^~~~
vldcb8in0_v_u32_m.c:37:55: warning: unused parameter 'maskoff' [-Wunused-parameter]
   37 | void vldcb8in0_v_u32_m_golden(uint64_t *mask,uint32_t maskoff[8][16],uint32_t *base,uint32_t imm,uint32_t exp_result[][ELE_NUM]) {
      |                                              ~~~~~~~~~^~~~~~~~~~~~~~
vldcb8in0_v_u32_m.c:37:94: warning: unused parameter 'imm' [-Wunused-parameter]
   37 | void vldcb8in0_v_u32_m_golden(uint64_t *mask,uint32_t maskoff[8][16],uint32_t *base,uint32_t imm,uint32_t exp_result[][ELE_NUM]) {
      |                                                                                     ~~~~~~~~~^~~
vldcb8in0_v_u32_m.c: In function 'main':
vldcb8in0_v_u32_m.c:62:5: warning: implicit declaration of function 'data_init_bool'; did you mean 'data_init_scalar'? [-Wimplicit-function-declaration]
   62 |     data_init_bool(mask, exp_mask, 16, 0xffffffff);
      |     ^~~~~~~~~~~~~~
      |     data_init_scalar
vldcb8in0_v_u32_m.c:83:80: warning: format '%d' expects argument of type 'int', but argument 7 has type 'uint32_t' {aka 'long unsigned int'} [-Wformat=]
   83 |                 printf("Failed: result.val[%d][%d] = %d, exp_result[%d][%d] = %d\n", i,j, result.val[i][j], i,j, exp_result[i][j]);
      |                                                                               ~^                                 ~~~~~~~~~~~~~~~~
      |                                                                                |                                              |
      |                                                                                int                                            uint32_t {aka long unsigned int}
      |                                                                               %ld
vldcb8in0_v_u32_m.c:53:14: warning: variable 'imm' set but not used [-Wunused-but-set-variable]
   53 |     uint32_t imm;
      |              ^~~
vldcb8in0_v_u32_m.c:62:5: warning: 'mask' is used uninitialized in this function [-Wuninitialized]
   62 |     data_init_bool(mask, exp_mask, 16, 0xffffffff);
      |     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
vldcb8in0_v_u32_m.c:28:20: warning: iteration 8 invokes undefined behavior [-Waggressive-loop-optimizations]
   28 |        a.val[i][j] = random(threshold); \
      |                    ^
vldcb8in0_v_u32_m.c:63:5: note: in expansion of macro 'data_init_matrix'
   63 |     data_init_matrix(maskoff, exp_maskoff, 16, 8, 0xffffffff);
      |     ^~~~~~~~~~~~~~~~
vldcb8in0_v_u32_m.c:26:4: note: within this loop
   26 |    for(int i = 0; i < m; i++) { \
      |    ^~~
vldcb8in0_v_u32_m.c:63:5: note: in expansion of macro 'data_init_matrix'
   63 |     data_init_matrix(maskoff, exp_maskoff, 16, 8, 0xffffffff);
      |     ^~~~~~~~~~~~~~~~
/opt/analog/riscv/1.0.1/Riscv/software/host/bin/gcc/bin/../lib/gcc/riscv32-rivai-elf/10.2.1/../../../../riscv32-rivai-elf/bin/ld: /home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/bin/test/vldcb8in0_v_u32_m.o: in function `main':
/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test/vldcb8in0_v_u32_m.c:62: undefined reference to `data_init_bool'
collect2: error: ld returned 1 exit status
make[1]: *** [/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/bin/test/vldcb8in0_v_u32_m.elf] Error 1
make: *** [bare] Error 2
======================================================================

 target	:	deccription
****************************
 bare	:	build application on baremental case. param: type=app-type app=app-name

 rbb	:	run bare-app on beak. (build it firstly if modified) param: APP_TYPE=type APP_NAME=app-name , bp=beak-param

 clean		:	delete objects generated by make
****************************

/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/scripts/gorun.sh /home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test "make -j4 APP_TYPE=test APP_NAME=vldcb8in0_v_u32_m"
~/workspace/risc-v/rivai/riscv-intrinsic-testing/test ~/workspace/risc-v/rivai/riscv-intrinsic-testing
make[1]: Entering directory '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test'
    CC vldcb8in0_v_u32_m.c
Linking....
/opt/analog/riscv/1.0.1/Riscv/software/host/bin/gcc/bin/riscv32-rivai-elf-gcc -o /home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/bin/test/vldcb8in0_v_u32_m.elf /home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/bin/test/vldcb8in0_v_u32_m.o -T/opt/analog/riscv/1.0.1/Riscv/software/target/bare/link.ld -nostartfiles -static -nostdlib -L/opt/analog/riscv/1.0.1/Riscv/software/target/common/lib/ -ldsp -lbare -lm -lc -lgcc
Makefile:85: recipe for target '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/bin/test/vldcb8in0_v_u32_m.elf' failed
make[1]: Leaving directory '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test'
Makefile:37: recipe for target 'bare' failed